src/css/stylesheet.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*------------ Universal Styles ------------*/
* {
    font-family: "Nunito", sans-serif;
    box-sizing: border-box;
}

header,
section {
    min-height: 100vh;
    padding: 40px 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    transition: background-color 0.3s;
}

html {
    margin: 0;
    padding: 0;
}

body {
    padding: 0;
    margin: 0 auto;
}


p {
    font-size: 14px;
    text-align: center;
    padding-top: 60px;
}

h1 {
    z-index: 3;
}

/*-------------------------------------------- HOME SECTION --------------------------------------------*/

/*------------ Particles Container ------------*/
@keyframes changeBackgroundColor {
    0% {
        background-color: #181936;
    }

    25% {
        background-color: #1e1b56;
    }

    50% {
        background-color: #1b3856;
    }

    75% {
        background-color: #1b3d56;
    }

    100% {
        background-color: #1b2756;
    }
}

#particles-js {
    z-index: 0;
    position: absolute !important;
    top: 0 !important;
    left: 0 !important;
    bottom: 0 !important;
    width: 100% !important;
    height: 100% !important;
    overflow: hidden;
    animation: changeBackgroundColor 20s infinite;
}

/*------------ Nav Bar Container ------------*/
.active-link {
    background-color: #fffafa;
    color: #000000;
}

nav {
    z-index: 5;
    position: fixed;
    left: 50%;
    top: 10px;
    transform: translateX(-50%);
    width: 65%;
    padding: 5px 15px;
    background-color: rgba(200, 200, 200, 0.95);
    border-radius: 20px;
    display: flex;
    justify-content: space-around;
    overflow: hidden;
}

nav>div {
    display: flex;
    justify-content: space-between;
}

nav h4,
nav a {
    border-radius: 10px;
    color: #646161;
    text-decoration: none;
    transition: background-color 0.3s, color 0.3s;
}

nav a:hover,
nav h4:hover {
    color: #000000;
}



/* Styling the nav bar for smaller devices */
@media only screen and (max-width: 700px) {
    .active-link {
        padding: 4px;
    }

    nav {
        width: 100%;
        height: auto;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }

    nav>div {
        font-size: 20px;
        flex-direction: row;
        align-items: center;
        gap: 10px;
        width: 100%;
        flex-wrap: wrap;
    }

    nav h4 {
        font-size: 15px;
        text-align: center;
        padding: 5px;
        flex: 1;
        flex-wrap: wrap;
        white-space: normal;
        /* Added this property to ensure text wraps */
    }
}

/*------------ Picture Container ------------*/
.picture-container {
    display: inline-block;
    position: relative;
    width: 100px;
    height: 100px;
    overflow: hidden;
    border-radius: 50%;
    z-index: 2;
}


.picture-container img {
    width: 100%;
    height: auto;
    justify-content: center;
}

@media only screen and (max-width: 700px) {
    .picture-container {
        width: 80px;
        height: 80px;
    }
}

/*------------ Introduction Container ------------*/
.intro-text {
    font-size: 30px;
    font-weight: bold;
    color: #fff;
    justify-content: center;
    border-radius: 15px;
    padding: 15px;
    z-index: 2;
    line-height: 1.5;
    text-align: center;
    max-width: 800px;
    margin-top: 20px;
}

@media only screen and (max-width: 700px) {
    .intro-text {
        font-size: 22px;
    }

    p {
        font-size: 12px;
    }
}

/*------------ Socials Container ------------*/
.social-icons {
    z-index: 3;
    display: flex;
    justify-content: center;
    gap: 10px;
}

.social-icons a {
    font-size: 60px;
    height: 60px;
    width: 100%;
}


.github:hover,
.github:focus,
.github:active,
.linkedin:hover,
.linkedin:focus,
.linkedin:active {
    transform: scale(1.05);
}

.github,
.linkedin {
    background-color: #2d3748;
    /* bg-gray-950 equivalent in Tailwind */
    color: white;
    /* text-white equivalent in Tailwind */
    padding: 1rem 1.75rem;
    /* px-7 py-3 equivalent in Tailwind */
    display: flex;
    align-items: center;
    gap: 0.5rem;
    /* gap-2 equivalent in Tailwind */
    border-radius: 9999px;
    /* rounded-full equivalent in Tailwind */
    outline: none;
    transition: transform 0.3s ease;
    /* transition for the scale effect */
    border: 2px solid white;
    /* border-2 border-white equivalent in Tailwind */

}

@media only screen and (max-width: 700px) {
    .social-icons a {
        z-index: 2;
        font-size: 60px;
        height: 15%;
        width: 60px;
    }

    .github,
    .linkedin {
        z-index: 3;
        font-size: 15px;
        justify-content: center;
        align-items: center;
        background-color: #2d3748;
        /* bg-gray-950 equivalent in Tailwind */
        color: white;
    }

    .github:hover,
    .github:focus,
    .github:active,
    .linkedin:hover,
    .linkedin:focus,
    .linkedin:active {
        transform: scale(1.05);
    }

}

/*-------------------------------------------- PROJECTS SECTION --------------------------------------------*/

#projects {
    background-color: #d5d5d5;
}

.tech-logos {
    padding-left: 15px;
    padding-top: 15px;
    font-size: 30px;
    word-spacing: 20px;
    align-items: center;
}

.personal-website,
.tic-tac-toe,
.weatherful-bot,
.gradebook-project {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}

.website-description,
.tic-tac-toe-description,
.weatherful-description,
.gradebook-description {
    flex: 1;
    display: grid;
    grid-template-rows: auto auto 1fr;
    gap: 10px;
}

.tic-tac-toe img,
.weatherful-bot img,
.gradebook-project img,
.personal-website img {
    height: 200px;
    /* or any other consistent height */
    width: auto;
    max-width: 40%;
    /* or any other consistent width */
}

.outlined-shadow {
    border: 1px solid rgba(0, 0, 0, 0.1);
    /* Thin border with slight opacity */
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    /* Standard box-shadow for extra depth */
}

@media only screen and (max-width: 700px) {
    .tech-logos {
        padding-left: 15px;
        padding-top: 15px;
        font-size: 12px;
    }

    .personal-website,
    .tic-tac-toe,
    .weatherful-bot,
    .gradebook-project {
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
    }

    .website-description,
    .tic-tac-toe-description,
    .weatherful-description,
    .gradebook-description {
        padding-bottom: 10px;
        justify-content: center;
        align-items: center;
    }

    .personal-website img,
    .tic-tac-toe img,
    .weatherful-bot img,
    .gradebook-project img {
        height: auto;
        width: fit-content;
    }
}

/*-------------------------------------------- SKILLS SECTION --------------------------------------------*/
#skills {
    background-color: #bbb;
    width: 100%;
}

/*-------------------------------------------- EXPERIENCE SECTION --------------------------------------------*/
#experience {
    background-color: #a5a5a5;
}

/*-------------------------------------------- EDUCATION SECTION --------------------------------------------*/
#education {
    background-color: #8a8a8a;
}

/*-------------------------------------------- CONTACT SECTION --------------------------------------------*/
#contact {
    background-color: #6a6a6a;
}

